2014-08-06  Mark Lam  <mark.lam@apple.com>

        Gardening: fix bindings test breakage for for r170564 merged in r172129.
        <https://webkit.org/b/134333>

        Not reviewed.

        No new tests.

        * bindings/scripts/test/JS/JSTestEventTarget.h:
        (WebCore::JSTestEventTarget::create):

2014-08-06  Ryuan Choi  <ryuan.choi@samsung.com>

        Unreviewed typo correction.

        * bindings/scripts/CodeGeneratorJS.pm: removed unnecessary space.
        (GenerateImplementation):

2014-08-05  James Craig  <jcraig@apple.com>

        Web Inspector: AXI: Add label string once AccessibilityObject::computedLabel() is available
        https://bugs.webkit.org/show_bug.cgi?id=129940

        Reviewed by Chris Fleizach.

        Test: inspector-protocol/dom/getAccessibilityPropertiesForNode-expected.txt

        * accessibility/AccessibilityObject.cpp: Fixed crash.
        (WebCore::AccessibilityObject::accessibilityComputedLabel): 
        * accessibility/AccessibilityObject.h: Method name update.
        * inspector/InspectorDOMAgent.cpp: New support for getting Node label from AccessibilityObject.
        (WebCore::InspectorDOMAgent::buildObjectForAccessibilityProperties):

2014-07-29  Filip Pizlo  <fpizlo@apple.com>

        Merge r170564, r170571, r170604, r170628, r170672, r170680, r170724, r170728, r170729, r170819, r170821, r170836, r170855, r170860, r170890, r170907, r170929, r171052, r171106, r171152, r171153, r171214 from ftlopt.

    2014-07-01  Mark Lam  <mark.lam@apple.com>
    
            [ftlopt] DebuggerCallFrame::scope() should return a DebuggerScope.
            <https://webkit.org/b/134420>
    
            Reviewed by Geoffrey Garen.
    
            No new tests.
    
            * ForwardingHeaders/debugger/DebuggerCallFrame.h: Removed.
            - This is not in use.  Hence, we can remove it.
            * bindings/js/ScriptController.cpp:
            (WebCore::ScriptController::attachDebugger):